<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvAnnotation"
        android:layout_width="469dp"
        android:layout_height="807dp"
        android:hint="@string/tv_json_view"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/btn_save"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtJsFileName"
        app:layout_constraintStart_toEndOf="@+id/edtJsFileName"
        app:layout_constraintTop_toTopOf="@+id/edtJsFileName" />

    <Button
        android:id="@+id/btnLoadJSON"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/load_json"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toTopOf="@+id/btnSave" />

    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_file_name"
        android:textSize="16sp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtJsFileName"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/tv_file_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/tvFileName"
        app:layout_constraintStart_toEndOf="@+id/tvFileName"
        app:layout_constraintTop_toTopOf="@+id/tvFileName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtInfo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/inform_edt_hint"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/btnInfo"
        app:layout_constraintStart_toEndOf="@+id/btnInfo"
        app:layout_constraintTop_toTopOf="@+id/btnInfo" />

    <Button
        android:id="@+id/btnAddImageItems"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_add_image_item"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInfo" />

    <EditText
        android:id="@+id/edtImageID"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="ID"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddImageItems"
        app:layout_constraintStart_toEndOf="@+id/btnAddImageItems"
        app:layout_constraintTop_toTopOf="@+id/btnAddImageItems" />

    <EditText
        android:id="@+id/edtImageWidth"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="width"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/edtImageID"
        app:layout_constraintStart_toEndOf="@+id/edtImageID"
        app:layout_constraintTop_toTopOf="@+id/edtImageID" />

    <EditText
        android:id="@+id/edtImageHeight"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="height"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/edtImageWidth"
        app:layout_constraintStart_toEndOf="@+id/edtImageWidth"
        app:layout_constraintTop_toTopOf="@+id/edtImageWidth" />

    <EditText
        android:id="@+id/edtImageFileName"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="Image File Name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/edtImageHeight"
        app:layout_constraintStart_toEndOf="@+id/edtImageHeight"
        app:layout_constraintTop_toTopOf="@+id/edtImageHeight" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/inform"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFileName" />

    <ImageButton
        android:id="@+id/btnFinish"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="Exit"
        android:hint="finish_exit"
        android:text="Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/finish75" />

    <EditText
        android:id="@+id/edtVersion"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/edtInfo"
        app:layout_constraintStart_toEndOf="@+id/edtInfo"
        app:layout_constraintTop_toTopOf="@+id/edtInfo" />

    <EditText
        android:id="@+id/edtVerYear"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/edtVersion"
        app:layout_constraintStart_toEndOf="@+id/edtVersion"
        app:layout_constraintTop_toTopOf="@+id/edtVersion" />

</androidx.constraintlayout.widget.ConstraintLayout>